# fluxradar

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/bot/: Cargo.toml
crates/bot/src/: i18n.rs  main.rs  ratelimit.rs
crates/domain/: Cargo.toml
crates/domain/src/: delta.rs  earnings.rs  lib.rs  node.rs  summary.rs  tier.rs  wallet.rs
crates/flux-client/: Cargo.toml
crates/flux-client/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: cache.rs  lib.rs  pg.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: ADR-001-stack.md  Copy of mockup_dashboard.html  FluxRadar_BRIEF.md  LICENSE_NOTES.md  TZ_FluxRadar_v1.2.md  TZ_Fluxnode_Service_v1.1.md  mockup_dashboard.html
docs/plans/: fluffy-wondering-lake-agent-a52165b5b206ba090.md  fluffy-wondering-lake.md
infra/: docker-compose.yml  nginx-fluxradar-frontproxy.conf  nginx-fluxradar.ru.conf  nginx.conf  nginx.prod.conf  prometheus.yml
migrations/: 0001_init.sql  0002_chat_settings.sql
scripts/: deploy.sh  gen-prerender.sh  prod-down.sh  prod-up.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: llms.txt  robots.txt  sitemap.xml
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/: Calculator.tsx  EarningsCard.tsx  Footer.tsx  Guide.tsx  Header.tsx  LangSwitch.tsx  NodeDetailDrawer.tsx  NodesTable.tsx  ParallelAssets.tsx  PriceSparkline.tsx  RadarLogo.tsx  RadarSpinner.tsx  Skeleton.tsx  Spotlight.tsx  StatCard.tsx  TelegramCta.tsx  ThemeToggle.tsx  TierCard.tsx  TotalsCards.tsx  WalletHeader.tsx  cardStyles.ts  icons.tsx
web/src/i18n/: en.ts  index.tsx  ru.ts  store.ts  zh.ts
web/src/lib/: earningsCalc.ts  format.ts  theme.tsx  themeStore.ts  useScrollSpy.ts  walletParam.ts
web/src/styles/: tokens.css
