[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/worker",
    "crates/bot",
    "crates/flux-client",
    "crates/domain",
    "crates/storage",
]

# Общие настройки и зависимости для всех крейтов workspace.
# Конкретные крейты подключают нужное через `<dep>.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"

[workspace.dependencies]
# --- внутренние крейты ---
domain = { path = "crates/domain" }
flux-client = { path = "crates/flux-client" }
storage = { path = "crates/storage" }

# --- async-рантайм ---
tokio = { version = "1", features = ["full"] }

# --- HTTP / web (см. docs/ADR-001-stack.md) ---
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# --- Flux API клиент ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# --- сериализация ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- БД / кэш (слой storage) ---
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
bb8 = "0.8"
bb8-redis = "0.17"

# --- Telegram-бот ---
# default-features off + rustls: убираем нативный OpenSSL (чище для distroless, §10.2).
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }

# --- наблюдаемость (§6) ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- общее ---
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dotenvy = "0.15"
