[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
domain.workspace = true
flux-client.workspace = true
storage.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
chrono.workspace = true
