[package]
name = "bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
domain.workspace = true
storage.workspace = true
flux-client.workspace = true

tokio.workspace = true
teloxide.workspace = true
sqlx.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
