[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
domain.workspace = true
flux-client.workspace = true
storage.workspace = true

tokio.workspace = true
teloxide.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
chrono.workspace = true
